[gd_scene load_steps=12 format=3 uid="uid://b5d2cnlqs3xp2"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_umyi2"]
[ext_resource type="Texture2D" uid="uid://i176pag31mql" path="res://assets/Ui Assets/space.png" id="2_3pcho"]
[ext_resource type="Texture2D" uid="uid://bkd6felx2aldl" path="res://assets/Ui Assets/PlayButtonFinal.png" id="3_gq7yx"]
[ext_resource type="PackedScene" uid="uid://cpp6uup1fjkuc" path="res://scenes/settings_menu.tscn" id="3_rmyff"]
[ext_resource type="Texture2D" uid="uid://b6y03eryoo3vo" path="res://assets/Ui Assets/earth.png" id="4_ov54s"]
[ext_resource type="BitMap" uid="uid://8bdcfev8e2a7" path="res://assets/Ui Assets/PlayButtonFinalMask.png" id="4_qrncs"]
<<<<<<< Updated upstream
[ext_resource type="PackedScene" uid="uid://u51lay85nrxb" path="res://scenes/controls.tscn" id="4_ri6o5"]
=======
[ext_resource type="Texture2D" uid="uid://bqy607tpg6l8v" path="res://assets/Ui Assets/logo diverse.aesprite.png" id="5_dupda"]
>>>>>>> Stashed changes
[ext_resource type="Texture2D" uid="uid://c3glu1a0qt6ck" path="res://assets/Ui Assets/OptionsButtonFinal.png" id="5_yeya2"]
[ext_resource type="BitMap" uid="uid://vs18d4un3gbf" path="res://assets/Ui Assets/OptionsButtonFinalMask.png" id="6_tq8eh"]
[ext_resource type="Texture2D" uid="uid://or3xeqm6ytvo" path="res://assets/Ui Assets/QuitButtonFinal.png" id="7_eebs3"]
[ext_resource type="BitMap" uid="uid://ds8crajepigky" path="res://assets/Ui Assets/QuitButtonFinalMask.png" id="8_g8pja"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_umyi2")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 344.0
offset_right = 94.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3pcho")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -483.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3pcho")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3pcho")
stretch_mode = 5

[node name="settings_menu" parent="TextureRect" instance=ExtResource("3_rmyff")]
visible = false
top_level = true
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

<<<<<<< Updated upstream
[node name="controls" parent="TextureRect" instance=ExtResource("4_ri6o5")]
visible = false
top_level = true
layout_mode = 1
=======
[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 162.0
offset_top = 132.0
offset_right = 974.0
offset_bottom = 944.0
texture = ExtResource("4_ov54s")
>>>>>>> Stashed changes

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("5_dupda")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Play" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("3_gq7yx")
texture_click_mask = ExtResource("4_qrncs")
stretch_mode = 5

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Settings" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("5_yeya2")
texture_click_mask = ExtResource("6_tq8eh")
stretch_mode = 5

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("7_eebs3")
texture_click_mask = ExtResource("8_g8pja")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
